# game-editor

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/: logger.hpp
core/include/data/: model_loader.hpp
core/include/data/model/: cube.h  cube2.h  enemy.h
core/include/es/: component.hpp  entity.hpp  model_component.h  system.hpp  transform_component.h
core/include/es/component/: mesh_component.h  model_component.h  transform_component.h
core/include/es/system/: entity_system.hpp  transform_system.hpp
core/include/graphics/: camera.hpp  color4f.hpp  frame.hpp  gllogger.hpp  glstate.hpp  material.hpp  primitives.hpp  render_op_manager.hpp  render_operation.hpp  render_queue.hpp  screen.h  shader_executor.hpp  shader_manager.hpp  shader_object.hpp  texture.hpp  texture_manager.hpp  transform.hpp  vertex_buffer.hpp  vertex_buffer_manager.hpp  vertex_data.hpp
core/include/graphics/primitives/: cube.h
core/include/graphics/shader_executor/: rendexec_draw_model.hpp  rendexec_draw_skybox.hpp  rendexec_draw_terrain.hpp  rendexec_draw_texture.hpp  rendexec_draw_wireframe.hpp
core/include/librocket/: librocket_renderer.hpp  librocket_system.hpp
core/include/math/: matrix4.hpp
core/include/platform/: FileSystem.hpp
core/resources/: terrain.raw
core/resources/rocket/: frame_rate.rml  lib_rocket.frag
core/resources/rocket/assets/: invader.rcss
core/resources/shader/: draw_model.frag  draw_model.vert  draw_skybox.frag  draw_skybox.vert  draw_texture.frag  terrain.vert  wireframe.frag  wireframe.vert
core/src/: constants.cpp  game.cpp  game.hpp  game_scene.hpp  logger.cpp  main.cpp  sdl_app.cpp  sdl_app.hpp  skybox.hpp  terrain.hpp
core/src/data/: model_loader.cpp
core/src/data/model/: skybox.h  station.h
core/src/es/: entity.cpp  entity_manager.cpp  model_component.cpp  system.cpp  transform_component.cpp
core/src/es/component/: mesh_component.cpp  model_component.cpp  transform_component.cpp
core/src/es/system/: entity_system.cpp  transform_system.cpp
core/src/graphics/: camera.cpp  camera.hpp  color4f.cpp  frame.cpp  gllogger.cpp  glstate.cpp  glstate.hpp  material.cpp  primitives.cpp  quad.cpp  quad.hpp  render_op_manager.cpp  render_operation.cpp  render_operation.hpp  render_queue.cpp  renderexecutor.hpp  rendexec_draw_model.cpp  rendexec_draw_model.hpp  rendexec_draw_skybox.cpp  rendexec_draw_skybox.hpp  rendexec_draw_terrain.cpp  rendexec_draw_terrain.hpp  rendexec_draw_texture.hpp  rendexec_draw_wireframe.hpp  screen.cpp  shader_executor.hpp  shader_manager.cpp  shader_object.cpp  shader_object.hpp  texture.cpp  texture.hpp  texture_manager.cpp  transform.cpp  transform.hpp  vertex_buffer.cpp  vertex_buffer_manager.cpp  vertex_data.cpp
core/src/graphics/primitives/: cube.cpp  cube.h  quad.cpp  quad.hpp
core/src/graphics/shader_executor/: rendexec_draw_model.cpp  rendexec_draw_model.hpp  rendexec_draw_skybox.cpp  rendexec_draw_skybox.hpp  rendexec_draw_terrain.cpp  rendexec_draw_terrain.hpp  rendexec_draw_texture.cpp  rendexec_draw_texture.hpp  rendexec_draw_wireframe.cpp  rendexec_draw_wireframe.hpp
core/src/librocket/: librocket_renderer.cpp  librocket_renderer.hpp  librocket_system.cpp
core/src/math/: matrix3.cpp  matrix4.cpp  matrix4.hpp  vector4.cpp
editor/: CMakeLists.txt
editor/resources/editor/ui/: .gitignore  config.rb  index.html
editor/resources/editor/ui/css/: editor.css  tabs.css
editor/resources/editor/ui/html/: editor.css  index.html  tabmenu.html
editor/resources/editor/ui/js/: browser.js  editor-state.js  file-editor.js  mock-editor.js
editor/resources/editor/ui/sass/: editor.scss  tabs.scss
editor/resources/editor/ui/stylesheets/: editor.css  tabs.css  (+1 more)
editor/src/: awesomium_handler.cpp  awesomium_handler.hpp  editor.cpp  editor.hpp  editor_config.cpp  editor_config.hpp  editor_sdl_app.cpp  editor_sdl_app.hpp  javascript_delegate.cpp  javascript_delegate.hpp  main.cpp
game/: .gitignore  CMakeLists.txt  flight.sln  game.vcxproj
game/resources/: terrain.raw
game/resources/rocket/: demo.rml  frame_rate.rml  icon.rcss  lib_rocket.frag  lib_rocket.vert  style.rcss
game/resources/rocket/assets/: window.rml
game/resources/shader/: draw_model.frag  draw_model.vert  draw_skybox.frag  draw_skybox.vert  draw_texture.frag  draw_texture.vert  fragment.frag  star_field.frag  star_field.vert  terrain.frag  terrain.vert  textured.vert  vertex.vert  wireframe.frag  wireframe.vert
game/src/: background.cpp  background.hpp  background_elements.cpp  background_elements.hpp  camera_control.cpp  camera_control.h  camera_control.hpp  constants.cpp  game.cpp  game.hpp  game_scene.cpp  game_scene.hpp  logger.cpp  logger.hpp  main.cpp  opengl.h  sdl_app.cpp  sdl_app.hpp  skybox.cpp  skybox.hpp  terrain.cpp  terrain.hpp
game/src/data/: model_loader.cpp  model_loader.hpp
game/src/data/model/: falcon.h  skybox.h  teapot.h  torus.h
game/src/es/: entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp
game/src/graphics/: camera.cpp  camera.hpp  frame.cpp  frame.hpp  gllogger.cpp  gllogger.hpp  glstate.cpp  opengl.h  quad.hpp  render_op_manager.cpp  render_op_manager.hpp  render_operation.cpp  render_operation.hpp  rendexec_draw_model.cpp  rendexec_draw_model.hpp  rendexec_draw_skybox.cpp  rendexec_draw_skybox.hpp  rendexec_draw_terrain.cpp  rendexec_draw_terrain.hpp  rendexec_draw_texture.cpp  rendexec_draw_texture.hpp  rendexec_draw_wireframe.cpp  rendexec_draw_wireframe.hpp  rendexec_star_field.cpp  rendexec_star_field.hpp  shader_manager.cpp  shader_manager.hpp  shader_object.cpp  shader_object.hpp  texture.cpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_manager.cpp  vertex_data.cpp  vertex_data.hpp
game/src/librocket/: librocket_renderer.cpp  librocket_renderer.hpp  librocket_system.cpp  librocket_system.hpp
game/src/math/: matrix3.hpp  matrix4.cpp  vector4.hpp
platform/linux/: CMakeLists.txt
platform/linux/src/: FileSystem.cpp
platform/osx/: CMakeLists.txt
platform/osx/src/: FileSystem.cpp
platform/win32/: CMakeLists.txt
platform/win32/src/: FileSystem.cpp
(+12 files in other folders)
